--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class=" d-flex flex-column justify-content-center align-items-center pt-5 w-75 m-auto flex-wrap">
                 <h2 class="fw-semibold text-dark-emphasis">Our Clients</h2>
                 <span class="text-dark-emphasis">We have been working with some Fortune 500+ clients</span>
-                <img src="./images/Clients Logos.png" class="w-100" alt="">
+                <marquee behavior="scrool" direction="left"><img src="./images/Clients Logos.png" class="w-100" alt=""></marquee>
             </div>
         </section>
 
