--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <header class="container-fluid bg-light ">
-        <nav class="d-flex justify-content-between pt-3 pb-5 w-75 m-auto align-items-center flex-wrap">
+    <header class=" bg-light ">
+        <nav class="d-flex justify-content-between pt-3 pb-5 container align-items-center flex-wrap">
             <div>
                 <img src="./images/Logo.png" alt="">
             </div>
@@ -36,8 +36,8 @@
     </header>
 
     <main>
-        <section class="container-fluid bg-light pt-2">
-            <div class="d-flex align-items-center justify-content-between py-5 w-75 m-auto flex-wrap">
+        <section class="bg-light pt-2">
+            <div class="d-flex align-items-center justify-content-between py-5 container flex-wrap">
                 <div class="d-flex flex-column justify-content-start gap-3 w-50 mx-5 flex-wrap">
                     <h1 class=" fw-semibold text-dark-emphasis display-3">Lessons and insights <span
                             class="text-success">from 8
@@ -51,17 +51,17 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-white pt-2">
-            <div class=" d-flex flex-column justify-content-center align-items-center pt-5 w-75 m-auto flex-wrap">
+        <section class="bg-white pt-2">
+            <div class=" d-flex flex-column justify-content-center align-items-center pt-5 container flex-wrap">
                 <h2 class="fw-semibold text-dark-emphasis">Our Clients</h2>
                 <span class="text-dark-emphasis">We have been working with some Fortune 500+ clients</span>
                 <marquee behavior="scroll" direction="left"><img src="./images/Clients Logos.png" class="w-100" alt=""></marquee>
             </div>
         </section>
 
-        <section class="container-fluid bg-white pt-2">
+        <section class="bg-white pt-2">
             <div class="w-75 m-auto ">
-                <div class="d-flex flex-column align-items-center w-50 m-auto text-center px-5">
+                <div class="d-flex flex-column align-items-center container text-center px-5">
                     <h2 class="fw-semibold text-dark-emphasis">Manage your entire community in a single system</h2>
                     <span>Who is Nextcent suitable for?</span>
                 </div>
@@ -94,8 +94,8 @@
             </div>
         </section>
 
-        <section class="container-fluid pt-2">
-            <div class="w-75 m-auto d-flex align-items-center justify-content-around flex-wrap">
+        <section class="pt-2">
+            <div class="container d-flex align-items-center justify-content-around flex-wrap">
                 <div>
                     <img src="./images/Frame 35.png" class="w-100" alt="">
                 </div>
@@ -110,8 +110,8 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-light pt-5 pb-5">
-            <div class="w-75 m-auto d-flex justify-content-around
+        <section class="bg-light pt-5 pb-5">
+            <div class="container d-flex justify-content-around
             pt-2 flex-wrap">
                 <div class="w-25">
                     <h3>Helping a local business reinvent itself</h3>
@@ -158,8 +158,8 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-white pt-2">
-            <div class="w-75 m-auto d-flex justify-content-around align-items-center flex-wrap">
+        <section class="bg-white pt-2">
+            <div class="container d-flex justify-content-around align-items-center flex-wrap">
                 <div>
                     <img src="./images/pana.png" class="w-100" alt="">
                 </div>
@@ -176,8 +176,8 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-light pt-5">
-            <div class="w-75 m-auto d-flex justify-content-around align-items-center flex-wrap">
+        <section class="bg-light pt-5">
+            <div class="container d-flex justify-content-around align-items-center flex-wrap">
                 <div>
                     <img src="./images/image 9.png" class="w-100" alt="">
                 </div>
@@ -200,8 +200,8 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-white pt-2">
-            <div class="w-75 m-auto pt-5">
+        <section class="bg-white pt-2">
+            <div class="container pt-5">
                 <div class="d-flex flex-column align-items-center text-center w-50 m-auto flex-wrap">
                     <h2>Caring is the new marketing</h2>
                     <span>The Nexcent blog is the best place to read about the latest membership insights, trends and
@@ -217,9 +217,9 @@
             </div>
         </section>
 
-        <section class="container-fluid bg-light py-5 ">
+        <section class="bg-light py-5 ">
             <div
-                class="w-75 m-auto d-flex flex-column justify-content-center align-items-center text-center gap-5 flex-wrap ">
+                class="container d-flex flex-column justify-content-center align-items-center text-center gap-5 flex-wrap ">
                 <h1 class="fw-bold display-4 w-50">Pellentesque suscipit fringilla libero eu.</h1>
                 <button type="button" class="btn btn-success py-2 px-3">Get a Demo <i
                         class="fa-solid fa-arrow-right"></i></button>
@@ -228,8 +228,8 @@
     </main>
 
     <footer>
-        <div class="container-fluid ">
-            <div class="w-75 m-auto pt-5 d-flex pb-5">
+        <div class="">
+            <div class="container pt-5 d-flex pb-5">
                 <div class="d-flex flex-column align-items-start justify-content-start me-5 pe-5 w-25">
                     <img src="./images/footer Logo.png" alt="" class="pb-3">
                     <span class="text-white">Copyright © 2020 Nexcent ltd.</span>
