--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
         <section class="bg-light pt-2">
             <div class="d-flex align-items-center justify-content-between py-5 container flex-wrap">
                 <div class="d-flex flex-column justify-content-start gap-3 w-50 mx-5 flex-wrap">
-                    <h1 class=" fw-semibold text-dark-emphasis display-3">Lessons and insights <span
+                    <h1 class=" fw-semibold text-dark-emphasis display-4">Lessons and insights <span
                             class="text-success">from 8
                             years</span></h1>
                     <span>Where to grow your business as a photographer: site or social media?</span>
                     <button type="button" class="btn btn-success w-25 py-3 px-3">Register</button>
                 </div>
-                <div class=" mx-5">
+                <div class=" mx-5 w-25">
                     <img src="./images/Illustration.png" class="w-100" alt="">
                 </div>
             </div>
@@ -55,7 +55,8 @@
             <div class=" d-flex flex-column justify-content-center align-items-center pt-5 container flex-wrap">
                 <h2 class="fw-semibold text-dark-emphasis">Our Clients</h2>
                 <span class="text-dark-emphasis">We have been working with some Fortune 500+ clients</span>
-                <marquee behavior="scroll" direction="left"><img src="./images/Clients Logos.png" class="w-100" alt=""></marquee>
+                <marquee behavior="scroll" direction="left"><img src="./images/Clients Logos.png" class="w-100" alt="">
+                </marquee>
             </div>
         </section>
 
@@ -111,8 +112,7 @@
         </section>
 
         <section class="bg-light pt-5 pb-5">
-            <div class="container d-flex justify-content-around
-            pt-2 flex-wrap">
+            <div class="container d-flex justify-content-between pt-2 flex-wrap">
                 <div class="w-25">
                     <h3>Helping a local business reinvent itself</h3>
                     <span>We reached here with our hard work and dedication</span>
@@ -158,7 +158,7 @@
             </div>
         </section>
 
-        <section class="bg-white pt-2">
+        <section class="bg-white pt-2 mb-5">
             <div class="container d-flex justify-content-around align-items-center flex-wrap">
                 <div>
                     <img src="./images/pana.png" class="w-100" alt="">
