--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 
     <main>
         <section class="bg-light pt-2">
-            <div class="d-flex align-items-center justify-content-between py-5 container flex-wrap">
+            <div class="d-flex align-items-center justify-content-between py-5 container flex-wrap gap-2">
                 <div class="d-flex flex-column justify-content-start gap-3 w-50 mx-5 flex-wrap">
                     <h1 class=" fw-semibold text-dark-emphasis display-4">Lessons and insights <span
-                            class="text-success">from 8
-                            years</span></h1>
+                            class="text-success">from 8 years</span></h1>
                     <span>Where to grow your business as a photographer: site or social media?</span>
                     <button type="button" class="btn btn-success w-25 py-3 px-3">Register</button>
                 </div>
@@ -111,13 +110,13 @@
             </div>
         </section>
 
-        <section class="bg-light pt-5 pb-5">
-            <div class="container d-flex justify-content-between pt-2 flex-wrap">
-                <div class="w-25">
-                    <h3>Helping a local business reinvent itself</h3>
+        <section class="bg-light py-5">
+            <div class="container d-flex justify-content-between pt-2 flex-wrap ">
+                <div class="w-50 text-center">
+                    <h3>Helping a local  <br> <span class="text-success">business reinvent itself</span></h3>
                     <span>We reached here with our hard work and dedication</span>
                 </div>
-                <div class="row row-cols-2 align-items-start">
+                <div class="row row-cols-2 align-items-start w-50">
                     <div class="d-flex justify-content-start align-items-start col mb-3">
                         <div>
                             <img src="./icons/heads.png" alt="">
@@ -158,7 +157,7 @@
             </div>
         </section>
 
-        <section class="bg-white pt-2 mb-5">
+        <section class="bg-white py-5">
             <div class="container d-flex justify-content-around align-items-center flex-wrap">
                 <div>
                     <img src="./images/pana.png" class="w-100" alt="">
@@ -176,7 +175,7 @@
             </div>
         </section>
 
-        <section class="bg-light pt-5">
+        <section class="bg-light py-5">
             <div class="container d-flex justify-content-around align-items-center flex-wrap">
                 <div>
                     <img src="./images/image 9.png" class="w-100" alt="">
@@ -190,18 +189,17 @@
                         malesuada enim sapien, vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget
                         efficitur libero condimentum id. Curabitur id nibh id sem dignissim finibus ac sit amet
                         magna.</span>
-                    <h4>Tim Smith</h4>
+                    <h4 class="text-success">Tim Smith</h4>
                     <span>British Dragon Boat Racing Association</span>
                     <div class="d-flex gap-3 align-items-center flex-wrap">
-                        <img src="./images/Frame 10.png" class="w-50" alt="">
-                        <h5><a href="#">Meet all customers <i class="fa-solid fa-chevron-right"></i></a></h5>
+                        <img src="./images/Frame 14.png" class="w-100" alt="">
                     </div>
                 </div>
             </div>
         </section>
 
-        <section class="bg-white pt-2">
-            <div class="container pt-5">
+        <section class="bg-white py-5">
+            <div class="container">
                 <div class="d-flex flex-column align-items-center text-center w-50 m-auto flex-wrap">
                     <h2>Caring is the new marketing</h2>
                     <span>The Nexcent blog is the best place to read about the latest membership insights, trends and
@@ -209,9 +207,9 @@
                         membership income and lot's more.​</span>
                 </div>
                 <div class="d-flex justify-content-around pt-2 flex-wrap">
-                    <a href="#"><img src="./images/1.png" class="w-100" alt=""></a>
-                    <a href="#"><img src="./images/2.png" class="w-100" alt=""></a>
-                    <a href="#"><img src="./images/3.png" class="w-100" alt=""></a>
+                    <a href="#" class="w-25"><img src="./images/1.png" class="w-100" alt=""></a>
+                    <a href="#" class="w-25"><img src="./images/2.png" class="w-100" alt=""></a>
+                    <a href="#" class="w-25"><img src="./images/3.png" class="w-100" alt=""></a>
 
                 </div>
             </div>
